--- a/css/style.css
+++ b/css/style.css
@@ -41,21 +41,20 @@ body{
 }
 .header-backgrnd-left{
 	width: 0;
-	height: calc(100vh - 128px);
+	min-height: 630px;
 }
 .header-nav{
 	display: flex;
 	align-items: center;
-	height: calc(100vh - 128px);
+	min-height: 630px;
 }
 .btn-area{
-	position: absolute;
+	position: fixed;
 	cursor: pointer;
 	width: 56px;
 	height: 31px;
-	left: 53px;
-	z-index: 10;
-	opacity: 0;
+	top: 400px;
+	left: 20px;
 }
 .burger-btn{
 	width: 45px;
@@ -122,7 +121,7 @@ body{
 .header-backgrnd-middle{
 	background: #55BA33;
 	width: 100%;
-	height: calc(100vh - 128px);
+	min-height: 630px;
 	display: flex;
 	position: relative;
 }
@@ -168,7 +167,7 @@ body{
 .header-backgrnd-right{
 	background: #f5f5f5;
 	width: 100%;
-	height: calc(100vh - 128px);
+	min-height: 630px;
 	transition: width 1.8s;
 }
 .welcome{
@@ -184,7 +183,7 @@ body{
 }
 .social-sidebar{
 	position: fixed;
-	top: 43%;
+	top: 385px;
 	right: 26px;
 	text-align: center;
 }
