--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body{
 	min-height: 630px;
 }
 .btn-area{
-	position: fixed;
+	position: absolute;
 	cursor: pointer;
 	width: 56px;
 	height: 31px;
@@ -64,6 +64,7 @@ body{
 	position: absolute;
 	top: 13px;
 	left: 11px;
+	transition-delay: .35s;
 }
 .burger-btn:before{
 	content: " ";
@@ -74,6 +75,7 @@ body{
 	position: absolute;
 	top: -13px;
 	left: -11px;
+	transition: .4s;
 }
 .burger-btn:after{
 	content: " ";
@@ -84,6 +86,7 @@ body{
 	position: absolute;
 	top: 13px;
 	left: -11px;
+	transition: .4s;
 }
 .nav-list{
 	margin: 0 0 0 80px;
@@ -254,6 +257,7 @@ body{
 }
 .burger-active .burger-btn{
 	width: 0;
+	transition-delay: 0s;
 }
 .scroll-active{
 	display: none;
