--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ body{
 }
 .social-sidebar{
 	position: fixed;
-	top: 385px;
+	top: 340px;
 	right: 26px;
 	text-align: center;
 }
@@ -440,6 +440,9 @@ body{
 	background: #f5f5f5;
 	padding: 80px 0 100px 80px;
 }
+.exp-item{
+   margin: 0 0 50px 0;
+}
 .exp-h2{
 	color: #272822;
 	margin: 0 0 80px;
@@ -458,7 +461,7 @@ body{
 	font-size: 32px;
 	color: #272822;
 	display: block;
-	margin: 0 0 46px;
+	margin: 0 0 20px;
 }
 .certificate{
 	display: inline-block;
