--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body{
 .wrapper {
 	padding: 30px 80px 0;
 	max-width: 1360px;
+   margin: 0 auto;
 }
 .header{
 	margin: 0 0 80px;
@@ -186,12 +187,17 @@ body{
 }
 .social-sidebar{
 	position: fixed;
-	top: 340px;
+	top: 50%;
 	right: 26px;
 	text-align: center;
+   transform: translateY(-50%);
 }
 .social-list-item{
 	margin: 0 0 16px;
+}
+
+.social-list-item:last-child{
+   margin: 0;
 }
 
 /*==========interactive=========
